@@ -1,6 +1,7 @@
 ikiwiki (3.20150611) UNRELEASED; urgency=medium
 
   * inline: change default sort order from age to "age title" for determinism
+  * img: avoid ImageMagick misinterpreting filenames containing a colon
 
  -- Simon McVittie <smcv@debian.org>  Thu, 11 Jun 2015 08:32:35 +0100
 
